Replace inefficient creation of new Character with Character.valueOf to get cached value